fix: fix horizontal scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  overflow-x: hidden;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -17,6 +15,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  min-width: 100vw;
+  width: 0;
 }
 
 a {
@@ -77,3 +83,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+@tailwind components;
+@tailwind utilities;
